# Open-Audit

./: .env.example  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  server.ts  vitest.config.ts  vitest.setup.ts
.github/: CONTRIBUTING.md
.github/workflows/: e2e-tests.yml  fixtures-regression.yml  playwright.yml  validate-registry.yml
__mocks__/: ioredis.ts
app/: layout.tsx
app/api/portfolio/[address]/performance/: route.ts
app/api/portfolio/performance/: route.test.ts  route.ts
app/api/v1/events/stream/: route.test.ts  route.ts
app/dashboard/: DashboardClient.tsx  page.tsx
cli/: open-audit-cli.ts
cli/examples/: token-transfer.json  token-transfer.yaml
components/dashboard/: EmptyState.test.tsx  EmptyState.tsx  EventDetailsModal.tsx  EventFeedTable.test.tsx  EventFeedTable.tsx  EventListSkeleton.test.tsx  EventListSkeleton.tsx  Header.tsx  SearchBar.tsx  StatsBar.tsx
e2e/: websocket-event-flow.spec.ts
e2e/helpers/: inject-event.ts
lib/__mocks__/: ioredis.ts
lib/hooks/: useDashboardPrefs.ts  useLiveFeed.ts  useSSEFeed.ts
lib/retention/: archiver.ts
lib/stellar/: contract-wasm-fetcher.ts  events.ts  example-integration.ts  indexer.ts
lib/stellar/__tests__/: client.integration.test.ts  indexer.test.ts  soroban-network.e2e.test.ts
lib/streaming/: eventBroker.test.ts  eventBroker.ts
lib/translator/: custom-abi.ts  decode.test.ts  decode.ts  registry.ts  schema-version.test.ts  schema-version.ts  spec-to-registry.ts  types.ts
lib/translator/blueprints/: sac-mint-burn.ts  sac-transfer.ts
lib/translator/fixtures/sac-transfer/: fixtures.json
native/soroban-xdr-decode/: Cargo.toml
tests/: fixtures-regression.spec.ts
